AlcoBot v1.0.0 (not yet released):
  NEW: Improved installation instructions.
  FIX: Division-by-zero error in the free module if the total size of a volume is zero.

AlcoBot v0.7.0 (Jan 7, 2006):
  NEW: Check for "DNS" fields in glFTPD v2.01 user-files.
  NEW: Completed Project-ZS-NG support, for glFTPD only.
  NEW: Module for ioA support, named "ioa".
  NEW: Module to issue SITE commands from IRC, named "sitecmd".
  NEW: Module to query glFTPD's data files, named "gldata".
  NEW: Option to format time values in UTC or local time.
  NEW: Option to prohibit wildcards in the undupe search pattern.
  NEW: Substitution type for sizes logged in megabytes.
  NEW: Support for nxAutoNuke v2.3 (the ANUKESIZE event).
  NEW: The onel command now supports "-limit" switch in the nxtools module.
  NEW: Uniform FTPD functions to resolve user names, user IDs, group names, and group IDs.
  CHG: Moved nxTools event definitions to the nxtools module.
  CHG: Renamed "latest" and "search" themes to "new" and "dupe", respectively.
  CHG: Renamed the "GlFtpd" and "IoFtpd" configuration sections to "Ftpd".
  CHG: Renamed the "ips" array element to "hosts" for the UserInfo function.
  CHG: The nxtools module no longer reads nxTools.cfg on start-up.
  FIX: Declare namespace variables before checking their existence.
  FIX: Grammatical errors in command descriptions (patch by iwi).
  FIX: Inconsistencies in the time duration functions (patch by iwi).
  FIX: Nukees were not displayed properly on NUKE and UNNUKE log events for glFTPD.
  FIX: The invite module passed the wrong number of arguments to ScriptUnregister (patch by iwi).

AlcoBot v0.6.0 (Oct 23, 2005):
  NEW: Added a "notify" callback to the FTP library (connection success).
  NEW: Bouncer module, to display the status of FTP bouncers.
  NEW: Expanded zipscript support to include iojZS (jeza) and php_psio (SnypeTEST).
  NEW: The "ftpd" module will indicate if the FTP connection succeeded or failed.