@@ -248,11 +248,13 @@ warnSection = STAFF
 #
 # cmdPrefix  - Command prefix for commands specific to this module. The
 #              default prefix will be used if this option is undefined.
+# hideCount  - Count hidden users in bandwidth totals.
 # hideUsers  - List of users to hide.
 # hideGroups - List of groups to hide.
 # hidePaths  - List of virtual paths to hide.
 #
 [Module::Online]
+hideCount  = False
 hideUsers  = sitebot
 hideGroups =
 hidePaths  = "/site/GROUPS/*" "/site/STAFF/*"
