@@ -263,11 +263,13 @@ undupeWild  = True
 #
 # cmdPrefix  - Command prefix for commands specific to this module. The
 #              default prefix will be used if this option is undefined.
+# hideCount  - Count hidden users in bandwidth totals.
 # hideUsers  - List of users to hide.
 # hideGroups - List of groups to hide.
 # hidePaths  - List of virtual paths to hide.
 #
 [Module::Online]
+hideCount  = False
 hideUsers  = sitebot
 hideGroups =
 hidePaths  = "/GROUPS/*" "/STAFF/*"
