@@ -1,6 +1,8 @@
 AlcoBot v1.0.0 (not yet released):
   NEW: Improved installation instructions.
+  NEW: Option to include or exclude hidden users in bandwidth stats (!bw/!bwdn/!bwup).
   FIX: Division-by-zero error in the free module if the total size of a volume is zero.
+  FIX: Inconsistencies in the FTP library's event handler during the login sequence.
 
 AlcoBot v0.7.0 (Jan 7, 2006):
   NEW: Check for "DNS" fields in glFTPD v2.01 user-files.
